--- a/my_gazebo/CMakeLists.txt
+++ b/my_gazebo/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(my_pkg)
+project(my_gazebo)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -32,7 +32,8 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-install(DIRECTORY launch
+install(
+ DIRECTORY launch description meshes
  DESTINATION share/${PROJECT_NAME}
 )
 
