--- a/my_gazebo/package.xml
+++ b/my_gazebo/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>my_pkg</name>
+  <name>my_gazebo</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="zega@todo.todo">zega</maintainer>
@@ -12,7 +12,6 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
-  <exec_depend>demo_node_py</exec_depend>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
