--- a/my_gazebo/description/controllers.yaml
+++ b/my_gazebo/description/controllers.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 30
+    update_rate: 1000
     use_sim_time: true
 
     joint_trajectory_controller:
@@ -36,27 +36,28 @@ joint_trajectory_controller:
       - LL-3-2
       - LL-3-3
     gains:
-      RL-1-1: {p: 100, d: 1, i: 1, i_clamp: 1}
-      RL-1-2: {p: 100, d: 1, i: 1, i_clamp: 1}
-      RL-1-3: {p: 100, d: 1, i: 1, i_clamp: 1}
-      RL-2-1: {p: 100, d: 1, i: 1, i_clamp: 1}
-      RL-2-2: {p: 100, d: 1, i: 1, i_clamp: 1}
-      RL-2-3: {p: 100, d: 1, i: 1, i_clamp: 1}
-      RL-3-1: {p: 100, d: 1, i: 1, i_clamp: 1}
-      RL-3-2: {p: 100, d: 1, i: 1, i_clamp: 1}
-      RL-3-3: {p: 100, d: 1, i: 1, i_clamp: 1}
-      LL-1-1: {p: 100, d: 1, i: 1, i_clamp: 1}
-      LL-1-2: {p: 100, d: 1, i: 1, i_clamp: 1}
-      LL-1-3: {p: 100, d: 1, i: 1, i_clamp: 1}
-      LL-2-1: {p: 100, d: 1, i: 1, i_clamp: 1}
-      LL-2-2: {p: 100, d: 1, i: 1, i_clamp: 1}
-      LL-2-3: {p: 100, d: 1, i: 1, i_clamp: 1}
-      LL-3-1: {p: 100, d: 1, i: 1, i_clamp: 1}
-      LL-3-2: {p: 100, d: 1, i: 1, i_clamp: 1}
-      LL-3-3: {p: 100, d: 1, i: 1, i_clamp: 1}
-    publish_rate: 30.0
-    base_frame_id: world
+      RL-1-1: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      RL-1-2: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      RL-1-3: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      RL-2-1: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      RL-2-2: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      RL-2-3: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      RL-3-1: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      RL-3-2: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      RL-3-3: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      LL-1-1: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      LL-1-2: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      LL-1-3: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      LL-2-1: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      LL-2-2: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      LL-2-3: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      LL-3-1: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      LL-3-2: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+      LL-3-3: {p: 50, d: 0.5, i: 1, i_clamp: 1}
+    publish_rate: 1000.0
+    allow_partial_joints_goal: false
+
 
 joint_state_broadcaster:
   ros__parameters:
-    publish_rate: 30.0
+    publish_rate: 1000.0
