--- a/my_gazebo/description/mapper_params_online_async.yaml
+++ b/my_gazebo/description/mapper_params_online_async.yaml
@@ -13,7 +13,7 @@ slam_toolbox:
     odom_frame: odom
     map_frame: map
     base_frame: base_footprint
-    scan_topic: scan
+    scan_topic: scan_filtered
     mode: mapping #localization
 
     # if you'd like to immediately start continuing a map at a given pose
@@ -24,11 +24,11 @@ slam_toolbox:
     #map_start_at_dock: true
 
     debug_logging: false
-    throttle_scans: 1
+    throttle_scans: 0
     transform_publish_period: 0.02 #if 0 never publishes odometry
-    map_update_interval: 1.0
+    map_update_interval: 4.0
     resolution: 0.05
-    max_laser_range: 20.0 #for rastering images
+    max_laser_range: 8.0 #for rastering images
     minimum_time_interval: 0.5
     transform_timeout: 0.2
     tf_buffer_duration: 30.
@@ -38,21 +38,21 @@ slam_toolbox:
     # General Parameters
     use_scan_matching: true
     use_scan_barycenter: true
-    minimum_travel_distance: 0.5
-    minimum_travel_heading: 0.5
-    scan_buffer_size: 10
+    minimum_travel_distance: 0.1
+    minimum_travel_heading: 0.1
+    scan_buffer_size: 20
     scan_buffer_maximum_scan_distance: 10.0
-    link_match_minimum_response_fine: 0.1  
+    link_match_minimum_response_fine: 0.15
     link_scan_maximum_distance: 1.5
     loop_search_maximum_distance: 3.0
     do_loop_closing: true 
     loop_match_minimum_chain_size: 10           
     loop_match_maximum_variance_coarse: 3.0  
-    loop_match_minimum_response_coarse: 0.35    
-    loop_match_minimum_response_fine: 0.45
+    loop_match_minimum_response_coarse: 0.8    
+    loop_match_minimum_response_fine: 0.6
 
     # Correlation Parameters - Correlation Parameters
-    correlation_search_space_dimension: 0.5
+    correlation_search_space_dimension: 0.3
     correlation_search_space_resolution: 0.01
     correlation_search_space_smear_deviation: 0.1 
 
