--- a/real/description/nav2_params.yaml
+++ b/real/description/nav2_params.yaml
@@ -191,8 +191,8 @@ local_costmap:
           obstacle_range: 2.2  # Было 2.5 (можно уменьшить до 2.0)
           raytrace_range: 5.0  # Было 3.0
         pointcloud_sensor:
-          topic: /Camera/points
-          sensor_frame: camera_link_optical
+          topic: /kinect/points
+          sensor_frame: kinect_depth
           max_obstacle_height: 0.4
           min_obstacle_height: 0.0
           obstacle_range: 2.5
@@ -229,8 +229,8 @@ global_costmap:
           obstacle_range: 2.2  # Было 2.5 (можно уменьшить до 2.0)
           raytrace_range: 5.0  # Было 3.0
         pointcloud_sensor:
-          topic: /Camera/points
-          sensor_frame: camera_link_optical
+          topic: /kinect/points
+          sensor_frame: kinect_depth
           max_obstacle_height: 0.4
           min_obstacle_height: 0.0
           obstacle_range: 2.5
